# AdventOfCode2022

./: .gitignore  build.gradle.kts
input/16/: input.txt
input/21/: input.txt
input/22/: input.txt
input/23/: input.txt
input/24/: input.txt
input/25/: input.txt
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/: AdventOfCode.kt  Day.kt  Day01.kt  Day02.kt  Day07.kt  Day09.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day21.kt  Day22.kt  Day23.kt  Day24.kt  Day25.kt
kotlin/src/test/kotlin/: Day01Test.kt  Day02Test.kt  Day03Test.kt  Day06Test.kt  Day12Test.kt  Day13Test.kt  Day15Test.kt  Day16Test.kt  Day17Test.kt  Day20Test.kt  Day21Test.kt  Day22Test.kt  Day23Test.kt  Day24Test.kt  Day25Test.kt  DayTest.kt
rust/: Cargo.toml
rust/src/: bin.rs  day01.rs  day02.rs  lib.rs
src/main/kotlin/: AdventOfCode.kt  CollectionUtils.kt  Day.kt  Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day1.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day15.kt  Day16.kt  Day17.kt  Day18.kt  Day2.kt  Day20.kt  Day3.kt  Input.kt  SequenceUtils.kt
src/main/kotlin/common/: CollectionUtils.kt  Direction.kt  Input.kt  Memoization.kt
src/main/resources/input/: day01.txt  day04.txt  day15.txt  day20.txt
src/test/kotlin/: Day01Test.kt  Day02Test.kt  Day03Test.kt  Day04Test.kt  Day05Test.kt  Day06Test.kt  Day07Test.kt  Day08Test.kt  Day09Test.kt  Day10Test.kt  Day11Test.kt  Day12Test.kt  Day13Test.kt  Day14Test.kt  Day18Test.kt  Day1Test.kt  Day2Test.kt  Day3Test.kt  DayTest.kt  TestInput.kt
(+4 files in other folders)
