[package]
name = "advent_of_code2022"
version = "0.1.0"
edition = "2021"

[lib]
name = "advent_of_code2022_lib"
path = "src/lib.rs"

[[bin]]
name = "advent_of_code2022_bin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
